# eol

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPENDENCIES.md  README.md  fix_file_exclusion.py  local_server_test.py  mkdocs.yml  pyproject.toml  test_execution_status.md  test_indexing_fixes.py  uv.toml
.claude/: CLAUDE.md
.claude/agents/: functional-engineer.md  quality-engineer.md  solution-architect.md
.claude/commands/: CLAUDE.md  prepare-pr.md  update-docs.md
.claude/commands/prp/: CLAUDE.md  README.md  analyze.md  create.md  execute.md  prepare-pr.md  review.md  validate.md
.claude/commands/quality/: README.md  check-quality.md  full-validation.md  performance-check.md  quick-check.md
.claude/context/: CLAUDE.md  ai-development-patterns.md  context-protocol.md  eol-architecture.md  eol-dependencies.md  eol-dependency-implementation.md  eol-dual-form.md  eol-file-format.md  eol-phases.md  eol-rag-context-architecture.md  existing-rag-mcp-analysis.md  lessons-learned.md  llm-data-patterns.md  mcp-architecture.md  planning-methodology.md  quality-gates.md  rag-patterns.md  redis-mcp-servers.md  redis-vector-db.md  semantic-cache.md
.claude/context/file-exclusion/: patterns.md  two-level-exclusion.md
.claude/context/knowledge-graph/: patterns.md
.claude/context/python/: CLAUDE.md  async-patterns.md  testing-strategies.md  type-hints.md
.claude/context/rag/: CLAUDE.md  document-processing.md  semantic-caching.md  vector-search.md
.claude/context/redis/: CLAUDE.md  connection-management.md  performance-tuning.md  vector-operations.md
.claude/findings/: 20250116_prp_review_multimodal_knowledge_graph.md  20250813_prp_review_test_coverage.md  20250813_redis_test_setup_guide.md  20250813_test_coverage_analysis.md  20250815_test_coverage_gap_analysis.md  20250818_architecture_review.md  20250818_quality_review.md  CLAUDE.md  test-isolation-lessons-learned.md
.claude/plans/: CLAUDE.md  README.md  claude-folder-enhancement-plan.md  eol_rag_mcp_testing_plan.md  test_execution_scripts.md
.claude/plans/completed/: 20250113_claude-folder-enhancement-plan.md  CLAUDE.md  prp-multimodal-knowledge-graph.md
.claude/plans/draft/: 20250813_test-coverage-80-percent.md  20250815_unified_documentation_migration.md  CLAUDE.md  prp-knowledge-graph.md  prp-multimodal-knowledge-graph.md
.claude/plans/pending/: 20250813_test-coverage-80-percent.md  CLAUDE.md
.claude/plans/ready/: CLAUDE.md
.github/actions/setup-python-deps/: action.yml
.github/actions/setup-python-deps-fast/: action.yml
.github/actions/setup-python-deps-ultra-fast/: action.yml
.github/badges/: integration-coverage-badge.json  unit-coverage-badge.json
.github/scripts/: README.md  coverage_check.py  coverage_summary.py  dependency_parser.py  performance_summary.py  security_scan_summary.py  test_summary.py  update-performance-badges.py  update-performance-readme.sh
.github/workflows/: build-test-image.yml.disabled  ci-cd.yml  dependencies.yml  dependency-cache.yml.disabled  dependency-optimization.yml  eol-rag-context-integration-optimized.yml  eol-rag-context-quality-gate-optimized.yml  eol-rag-context-quality-gate.yml  eol-rag-context.yml  performance-badges.yml  test-rag-context.yml  test.yml
docs/: index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
examples/: payment-processor.eol.md  payment-processor.test.eol.md
requirements/: base.txt  constraints.txt  dev.txt
scripts/: check-deps.sh  manage_docs_version.sh  setup-workspace.sh  sync-deps.sh  test-all.sh  update-deps.sh  validate_docs.py
